Cards on mobile Fixed cards on mobile and made them 275 rather than 300

--- a/app/components/dynamic/ui/card/styles.scss
+++ b/app/components/dynamic/ui/card/styles.scss
@@ -1,7 +1,22 @@
 .card_container {
-  width: 300px;
-  height: 300px;
+  width: 275px;
+  height: 275px;
   perspective: 75rem;
+
+  @include breakpoint(medium) {
+    width: 300px;
+    height: 300px;
+  }
+
+  @include breakpoint(large) {
+    width: 300px;
+    height: 300px;
+  }
+
+  @include breakpoint(wide) {
+    width: 300px;
+    height: 300px;
+  }
 
   .card {
     position: relative;
