--- a/app/components/structural/routes/blog/index/styles.scss
+++ b/app/components/structural/routes/blog/index/styles.scss
@@ -51,7 +51,7 @@
     }
 
     .blog_flipcard_container {
-      margin: 50px;
+      margin-bottom: 50px;
 
       img {
         max-width: 100%;
